--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,6 +15,68 @@ html {
   border-radius: 15px;
 }
 
+.Rainy .Sunny .Cloudy .Snowy {
+  position: relative;
+  background-color: white;
+  overflow: hidden;
+  border-radius: 15px;
+}
+.Rainy::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  opacity: 0.2;
+  background-image: url("./images/rainy.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 15px;
+}
+
+.Cloudy::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  opacity: 0.2;
+  background-image: url("./images/cloudy.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 15px;
+}
+
+.Sunny::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  opacity: 0.2;
+  background-image: url("./images/clear.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 15px;
+}
+
+.Snowy::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  opacity: 0.2;
+  background-image: url("./images/snowy.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 15px;
+}
+
 .jumbo {
   padding: 0.5%;
 }
